added employee info to cards

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,5 +1,4 @@
-$primary-color: #ce1a1a;
-
-h1 {
-	color: $primary-color;
-}
+$primary-text-color: #555555;
+$background-color: #f8f8f8;
+$card-background-color: #fff;
+$primary-text-font: 'Source Sans Pro', sans-serif;
