--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,45 @@
-h1 {
-  color: #ce1a1a; }
+body {
+  background-color: #f8f8f8;
+  max-width: 1400px;
+  margin: 0 auto; }
+
+.main {
+  width: 100%;
+  margin: 0 auto; }
+
+h3 {
+  color: #555555;
+  text-transform: uppercase;
+  font-family: "Source Sans Pro", sans-serif;
+  letter-spacing: 1px;
+  width: 90%;
+  text-align: center; }
+
+.employee-cards {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center; }
+
+.card {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 10px;
+  width: 300px;
+  background-color: #fff; }
+
+.thumbnail {
+  border-radius: 50%; }
+
+@media (min-width: 760px) {
+  .card {
+    width: 350px; }
+
+  h3 {
+    width: 80%;
+    text-align: left; } }
 
 /*# sourceMappingURL=main.css.map */
