--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
 /*
 Error: Undefined variable: "$background-color".
-        on line 2 of scss/styles.scss
+        on line 5 of scss/styles.scss
 
-1: body {
-2:     background-color: $background-color;
-3:     max-width: 1400px;
-4:     margin: 0 auto;
-5: }
-6: .main {
-7:     width: 100%;
+1: * {
+2:     box-sizing: border-box;
+3: }
+4: body {
+5:     background-color: $background-color;
+6:     max-width: 1400px;
+7:     margin: 0 auto;
+8: }
+9: .main {
+10:     width: 100%;
 
 Backtrace:
-scss/styles.scss:2
+scss/styles.scss:5
 /Library/Ruby/Gems/2.3.0/gems/sass-3.7.3/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.3.0/gems/sass-3.7.3/lib/sass/script/tree/node.rb:50:in `perform'
 /Library/Ruby/Gems/2.3.0/gems/sass-3.7.3/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
@@ -65,4 +68,4 @@ scss/styles.scss:2
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$background-color\".\A         on line 2 of scss/styles.scss\A \A 1: body {\A 2:     background-color: $background-color;\A 3:     max-width: 1400px;\A 4:     margin: 0 auto;\A 5: }\A 6: .main {\A 7:     width: 100%;"; }
+  content: "Error: Undefined variable: \"$background-color\".\A         on line 5 of scss/styles.scss\A \A 1: * {\A 2:     box-sizing: border-box;\A 3: }\A 4: body {\A 5:     background-color: $background-color;\A 6:     max-width: 1400px;\A 7:     margin: 0 auto;\A 8: }\A 9: .main {\A 10:     width: 100%;"; }
