--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: $background-color;
     max-width: 1400px;
@@ -14,33 +17,56 @@ h3 {
     letter-spacing: 1px;
     width: 90%;
     text-align: center;
+    font-weight: 400;
 }
 .employee-cards {
-    display: flex; 
-    flex-flow: row wrap;
+    @include flex; 
     justify-content: center;
-
 }
 .card {
-    display: flex;
-    flex-flow: row wrap;
+    @include flex; 
     justify-content: space-between;
     border: 1px solid lightgray;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 20px;
     margin: 10px;
-    width: 300px;
+    width: 300px; 
     background-color: $card-background-color;
+}
+.employee-preview-information {
+    @include flex; 
+    width: 70%;
+    font-family: $primary-text-font;
+    flex-direction: column;
 }
 .thumbnail {
     border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+.full-name {
+    font-size: 20px; 
+}
+.email,
+.city {
+    font-size: 14px;
+    font-weight: 300;
+    margin: 5px 0px;
 }
 @media (min-width: 760px) {
     .card {
-        width: 350px;
+        width: 370px;
     }
     h3 {
         width: 80%;
         text-align: left;
+    }
+    .thumbnail {
+        width: 100px;
+        height: 100px;
+    }
+    .employee-preview-information {
+        width: 65%;
+        margin-left: 5px;
     }
 }
