added hover states

--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -2,3 +2,8 @@
     display: flex; 
     flex-flow: row wrap;
 }
+@mixin secondary-text {
+    font-size: 14px;
+    font-weight: 300;
+    font-family: $primary-text-font;
+}
