--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,4 +1,7 @@
+// COLORS
 $primary-text-color: #555555;
 $background-color: #f8f8f8;
 $card-background-color: #fff;
+
+// FONTS
 $primary-text-font: 'Source Sans Pro', sans-serif;
