--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,6 +80,7 @@ h3 {
     display: flex; 
     flex-flow: column;
     border-radius: 10px;
+    position: relative;
 }
 .modal-close {
     align-self: flex-end;
@@ -92,6 +93,7 @@ h3 {
 }
 .employee-modal-information {
     padding: 20px 0px;
+    
 }
 .extra {
     border-top: 1px solid lightgray;
@@ -104,6 +106,26 @@ h3 {
 .modal-close {
     border: none;
     font-size: 18px;
+}
+.previous-button,
+.next-button {
+    border: none;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 50px;
+    color: lightgray;
+    position: absolute;
+    background-color: transparent;
+  &:hover {
+      color:rgb(65, 63, 63);
+  }  
+}
+.next-button {
+    top: 50%;
+    right: -20%;
+}
+.previous-button {
+    top: 50%;
+    left: -20%;
 }
 @media (min-width: 760px) {
     .card {
